# hangman

./: README.md  hangman.py  setup.cfg
words/: words2.txt  words3.txt
