[metadata]
name = Hangman
version = 0.0.1
author = GWBG
author_email = justdoitalreadynow31@gmail.com
description = Pre-alpha alpha Ver.0.0.0.0.0.0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndreySevostyanov/tutur2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src